archive/parser/tests/snapshots/statements/valid/0047@3.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE DATABASE x LC_COLLATE \"en_US.UTF-8\";"
---
Parse {
    cst: SourceFile@0..43
      CreatedbStmt@0..43
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Database@7..15 "DATABASE"
        Whitespace@15..16 " "
        Ident@16..17 "x"
        Whitespace@17..18 " "
        DefElem@18..42
          Ident@18..28 "LC_COLLATE"
          Whitespace@28..29 " "
          Ident@29..42 "\"en_US.UTF-8\""
        Ascii59@42..43 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreatedbStmt(
                CreatedbStmt {
                    dbname: "x",
                    options: [
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "lc_collate",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    String(
                                                        String {
                                                            sval: "en_US.UTF-8",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 18,
                                    },
                                ),
                            ),
                        },
                    ],
                },
            ),
            range: 0..42,
        },
    ],
}
