archive/parser/tests/snapshots/statements/valid/0047@6.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE DATABASE x TEMPLATE TRUE;
---
Parse {
    cst: SourceFile@0..32
      CreatedbStmt@0..32
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Database@7..15 "DATABASE"
        Whitespace@15..16 " "
        Ident@16..17 "x"
        Whitespace@17..18 " "
        DefElem@18..31
          Template@18..26 "TEMPLATE"
          Whitespace@26..27 " "
          TrueP@27..31 "TRUE"
        Ascii59@31..32 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreatedbStmt(
                CreatedbStmt {
                    dbname: "x",
                    options: [
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "template",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    String(
                                                        String {
                                                            sval: "true",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 18,
                                    },
                                ),
                            ),
                        },
                    ],
                },
            ),
            range: 0..31,
        },
    ],
}
