archive/parser/tests/snapshots/statements/valid/0051@4.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE INDEX ON films ((lower(title)));
---
Parse {
    cst: SourceFile@0..39
      IndexStmt@0..39
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Index@7..12 "INDEX"
        Whitespace@12..13 " "
        On@13..15 "ON"
        Whitespace@15..16 " "
        RangeVar@16..21
          Ident@16..21 "films"
        Whitespace@21..22 " "
        Ascii40@22..23 "("
        Ascii40@23..24 "("
        IndexElem@24..35
          FuncCall@24..35
            Ident@24..29 "lower"
            Ascii40@29..30 "("
            ColumnRef@30..35
              Ident@30..35 "title"
        Ascii41@35..36 ")"
        Ascii41@36..37 ")"
        Ascii41@37..38 ")"
        Ascii59@38..39 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: IndexStmt(
                IndexStmt {
                    idxname: "",
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "films",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 16,
                        },
                    ),
                    access_method: "btree",
                    table_space: "",
                    index_params: [
                        Node {
                            node: Some(
                                IndexElem(
                                    IndexElem {
                                        name: "",
                                        expr: Some(
                                            Node {
                                                node: Some(
                                                    FuncCall(
                                                        FuncCall {
                                                            funcname: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "lower",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            args: [
                                                                Node {
                                                                    node: Some(
                                                                        ColumnRef(
                                                                            ColumnRef {
                                                                                fields: [
                                                                                    Node {
                                                                                        node: Some(
                                                                                            String(
                                                                                                String {
                                                                                                    sval: "title",
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ],
                                                                                location: 30,
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            agg_order: [],
                                                            agg_filter: None,
                                                            over: None,
                                                            agg_within_group: false,
                                                            agg_star: false,
                                                            agg_distinct: false,
                                                            func_variadic: false,
                                                            funcformat: CoerceExplicitCall,
                                                            location: 24,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        indexcolname: "",
                                        collation: [],
                                        opclass: [],
                                        opclassopts: [],
                                        ordering: SortbyDefault,
                                        nulls_ordering: SortbyNullsDefault,
                                    },
                                ),
                            ),
                        },
                    ],
                    index_including_params: [],
                    options: [],
                    where_clause: None,
                    exclude_op_names: [],
                    idxcomment: "",
                    index_oid: 0,
                    old_node: 0,
                    old_create_subid: 0,
                    old_first_relfilenode_subid: 0,
                    unique: false,
                    nulls_not_distinct: false,
                    primary: false,
                    isconstraint: false,
                    deferrable: false,
                    initdeferred: false,
                    transformed: false,
                    concurrent: false,
                    if_not_exists: false,
                    reset_default_tblspc: false,
                },
            ),
            range: 0..38,
        },
    ],
}
