archive/parser/tests/snapshots/statements/valid/0051@6.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE INDEX title_idx_nulls_low ON films (title NULLS FIRST);
---
Parse {
    cst: SourceFile@0..62
      IndexStmt@0..62
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Index@7..12 "INDEX"
        Whitespace@12..13 " "
        Ident@13..32 "title_idx_nulls_low"
        Whitespace@32..33 " "
        On@33..35 "ON"
        Whitespace@35..36 " "
        RangeVar@36..41
          Ident@36..41 "films"
        Whitespace@41..42 " "
        Ascii40@42..43 "("
        IndexElem@43..60
          Ident@43..48 "title"
          Whitespace@48..49 " "
          NullsP@49..54 "NULLS"
          Whitespace@54..55 " "
          FirstP@55..60 "FIRST"
        Ascii41@60..61 ")"
        Ascii59@61..62 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: IndexStmt(
                IndexStmt {
                    idxname: "title_idx_nulls_low",
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "films",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 36,
                        },
                    ),
                    access_method: "btree",
                    table_space: "",
                    index_params: [
                        Node {
                            node: Some(
                                IndexElem(
                                    IndexElem {
                                        name: "title",
                                        expr: None,
                                        indexcolname: "",
                                        collation: [],
                                        opclass: [],
                                        opclassopts: [],
                                        ordering: SortbyDefault,
                                        nulls_ordering: SortbyNullsFirst,
                                    },
                                ),
                            ),
                        },
                    ],
                    index_including_params: [],
                    options: [],
                    where_clause: None,
                    exclude_op_names: [],
                    idxcomment: "",
                    index_oid: 0,
                    old_node: 0,
                    old_create_subid: 0,
                    old_first_relfilenode_subid: 0,
                    unique: false,
                    nulls_not_distinct: false,
                    primary: false,
                    isconstraint: false,
                    deferrable: false,
                    initdeferred: false,
                    transformed: false,
                    concurrent: false,
                    if_not_exists: false,
                    reset_default_tblspc: false,
                },
            ),
            range: 0..61,
        },
    ],
}
