archive/parser/tests/snapshots/statements/valid/0051@9.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE INDEX code_idx ON films (code) TABLESPACE indexspace;
---
Parse {
    cst: SourceFile@0..60
      IndexStmt@0..60
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Index@7..12 "INDEX"
        Whitespace@12..13 " "
        Ident@13..21 "code_idx"
        Whitespace@21..22 " "
        On@22..24 "ON"
        Whitespace@24..25 " "
        RangeVar@25..30
          Ident@25..30 "films"
        Whitespace@30..31 " "
        Ascii40@31..32 "("
        IndexElem@32..36
          Ident@32..36 "code"
        Ascii41@36..37 ")"
        Whitespace@37..38 " "
        Tablespace@38..48 "TABLESPACE"
        Whitespace@48..49 " "
        Ident@49..59 "indexspace"
        Ascii59@59..60 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: IndexStmt(
                IndexStmt {
                    idxname: "code_idx",
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "films",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 25,
                        },
                    ),
                    access_method: "btree",
                    table_space: "indexspace",
                    index_params: [
                        Node {
                            node: Some(
                                IndexElem(
                                    IndexElem {
                                        name: "code",
                                        expr: None,
                                        indexcolname: "",
                                        collation: [],
                                        opclass: [],
                                        opclassopts: [],
                                        ordering: SortbyDefault,
                                        nulls_ordering: SortbyNullsDefault,
                                    },
                                ),
                            ),
                        },
                    ],
                    index_including_params: [],
                    options: [],
                    where_clause: None,
                    exclude_op_names: [],
                    idxcomment: "",
                    index_oid: 0,
                    old_node: 0,
                    old_create_subid: 0,
                    old_first_relfilenode_subid: 0,
                    unique: false,
                    nulls_not_distinct: false,
                    primary: false,
                    isconstraint: false,
                    deferrable: false,
                    initdeferred: false,
                    transformed: false,
                    concurrent: false,
                    if_not_exists: false,
                    reset_default_tblspc: false,
                },
            ),
            range: 0..59,
        },
    ],
}
